New in-class module: computer science/vqe (#3842)
New qiskit computer science in-class module - VQE.
Local check all passed

---------

Co-authored-by: christopherporter1 <christopher.porter1@ibm.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: christopherporter1 <125992427+christopherporter1@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -1013,6 +1013,8 @@ notifications:
     - "@christopherporter1"
   "learning/modules/computer-science/quantum-teleportation":
     - "@christopherporter1"
+  "learning/modules/computer-science/vqe":
+    - "@christopherporter1"
   "learning/courses/quantum-chem-with-vqe/index":
     - "@christopherporter1"
   "learning/courses/quantum-chem-with-vqe/introduction":
