adding new qcip ep6 text for review (#3695)
Adding the text component of QCiP ep 6 on simulating nature. Still needs
technical review.

---------

Co-authored-by: Soyoung Shin <63990199+0sophy1@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -717,6 +717,8 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/utility-scale-qaoa":
     - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/simulating-nature":
+    - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
   "learning/courses/quantum-diagonalization-algorithms/index":
