Context-based restrictions file (#3820)

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -20,6 +20,9 @@ notifications:
   "docs/security/secure-data":
     - "@abbycross"
     - "beckykd"
+  "docs/security/context-based-restrictions":
+    - "@abbycross"
+    - "beckykd"
   "docs/open-source/code-of-conduct":
     - "@abbycross"
   "docs/open-source/create-a-provider":
