fixed image file and added to yaml

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -1012,6 +1012,8 @@ notifications:
     - "@christopherporter1"
   "learning/modules/computer-science/deutsch-jozsa":
     - "@christopherporter1"
+  "learning/modules/computer-science/grovers":
+    - "@christopherporter1"
   "learning/modules/computer-science/index":
     - "@christopherporter1"
   "learning/modules/computer-science/quantum-key-distribution":
