--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -270,6 +270,7 @@ notebooks = [
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
     "learning/modules/computer-science/deutsch-jozsa.ipynb",
     "learning/modules/computer-science/vqe.ipynb",
+    "learning/modules/computer-science/grovers.ipynb",
     "learning/modules/computer-science/quantum-key-distribution.ipynb",
     "learning/modules/computer-science/quantum-teleportation.ipynb",
     "learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb",
