Consolidate initialization information

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -242,6 +242,10 @@ notifications:
     - "@beckykd"
   "docs/guides/primitives":
     - "@ElePT"
+  "docs/guides/initialize-account":
+    - "@ElePT"
+    - "@beckykd"
+    - "@abbycross"
   "docs/guides/primitives-examples":
     - "@jyu00"
     - "@beckykd"
