Added qiskit implementation to single systems.

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -215,6 +215,7 @@ notebooks = [
     "learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb",
     "learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb",
+    learning/courses/basics-of-quantum-information/single-systems/qiskit-implementation.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb",
