--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -782,6 +782,9 @@ notifications:
   "learning/courses/basics-of-quantum-information/single-systems/quantum-information":
     - "@kcmccormibm"
     - "@christopherporter1"
+  "learning/courses/basics-of-quantum-information/single-systems/qiskit-implementation":
+    - "@kcmccormibm"
+    - "@christopherporter1"
   "learning/courses/basics-of-quantum-information/multiple-systems/introduction":
     - "@kcmccormibm"
     - "@christopherporter1"
