added multiple system qiskit implementation

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -794,6 +794,9 @@ notifications:
   "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information":
     - "@kcmccormibm"
     - "@christopherporter1"
+  "learning/courses/basics-of-quantum-information/multiple-systems/qiskit-implementation":
+    - "@kcmccormibm"
+    - "@christopherporter1"
   "learning/courses/basics-of-quantum-information/quantum-circuits/introduction":
     - "@kcmccormibm"
     - "@christopherporter1"
