--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -219,6 +219,7 @@ notebooks = [
     "learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/qiskit-implementation.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/circuits.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb",
