added qiskit implementation to entanglement in action

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -818,6 +818,9 @@ notifications:
   "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding":
     - "@kcmccormibm"
     - "@christopherporter1"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation":
+    - "@kcmccormibm"
+    - "@christopherporter1"
   "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
     - "@christopherporter1"
   "learning/courses/basics-of-quantum-information/exam":
