--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -228,6 +228,7 @@ notebooks = [
     "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb",
     "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb",
     "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb",
