Make saving credentials a new topic

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -246,6 +246,10 @@ notifications:
     - "@ElePT"
     - "@beckykd"
     - "@abbycross"
+  "docs/guides/save-credentials":
+    - "@ElePT"
+    - "@beckykd"
+    - "@abbycross"
   "docs/guides/primitives-examples":
     - "@jyu00"
     - "@beckykd"
