Cp/uqic qiskit (#3916)
Adding qiskit implementations to John Watrous's BQI and FQA

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -215,9 +215,11 @@ notebooks = [
     "learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb",
     "learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/qiskit-implementation.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb",
     "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/qiskit-implementation.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/circuits.ipynb",
     "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb",
@@ -226,6 +228,7 @@ notebooks = [
     "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb",
     "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb",
     "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/qiskit-implementation.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb",
     "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb",
