Updated required files
- Updated metadata
- Updated qiskit_bot
- Updated _toc.json

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -1074,3 +1074,5 @@ notifications:
     - "@christopherporter1"
   "learning/courses/utility-scale-quantum-computing/utility-iii":
     - "@christopherporter1"
+  "docs/tutorials/transverse-field-ising-model":
+    - "@dsierrasosa"
