--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -53,6 +53,7 @@ notebooks = [
     "docs/guides/primitives-rest-api.ipynb",
     "docs/guides/repetition-rate-execution.ipynb",
     "docs/guides/save-jobs.ipynb",
+    "docs/guides/add-job-tags.ipynb",
     "docs/guides/simulate-with-qiskit-sdk-primitives.ipynb",
     "docs/guides/synthesize-unitary-operators.ipynb",
     "docs/guides/DAG-representation.ipynb",
