Add tutorial for LRCX with parallel bell pairs
This commit adds the initial version of the tutorial notebook on the tutorial for LRCX with parallel bell pairs. Note that this version does not have stretch, but will be added in an revision.

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -710,6 +710,8 @@ notifications:
     - "@henryzou50"
     - "@miamico"
     - "@annaliese-estes"
+  "docs/tutorials/lrcx-with-parallel-bell-pairs":
+    - "@henryzou50"
   "learning/courses/quantum-computing-in-practice/introduction":
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
