Add timing visualization page

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -370,6 +370,9 @@ notifications:
     - "@kaelynj"
   "docs/migration-guides/qiskit-algorithms-module":
     - "@ElePT"
+  "docs/guides/visualize-circuit-timing":
+    - "@jyu00"
+    - "@beckykd"
   "docs/migration-guides/external-providers-primitives-v2":
     - "@ElePT"
     - "@jyu00"
