--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -39,6 +39,7 @@ notebooks = [
     "docs/guides/transpiler-plugins.ipynb",
     "docs/guides/transpiler-stages.ipynb",
     "docs/guides/visualize-circuits.ipynb",
+    "docs/guides/visualize-circuit-timing.ipynb",
     "docs/guides/qiskit-addons-cutting-wires.ipynb",
     "docs/guides/qiskit-addons-utils.ipynb",
     "docs/guides/bit-ordering.ipynb",
