--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -93,6 +93,7 @@ notebooks = [
     "docs/guides/run-jobs-session.ipynb",
     "docs/guides/monitor-job.ipynb",
     "docs/guides/primitive-input-output.ipynb",
+    "docs/guides/add-job-tags.ipynb",
 ]
 
 # Only run the following notebooks in our fortnightly cron job on real hardware.
