--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -99,7 +99,6 @@ notebooks = [
 test-strategies.hardware = { patch="qiskit-ibm-runtime-open" }
 notebooks = [
     "docs/tutorials/hello-world.ipynb",
-    "docs/guides/monitor-job.ipynb",
     # The following notebook takes >300s to run and should be executed in the
     # cron job. Even though it does not use real hardware
     "docs/guides/qiskit-addons-cutting-gates.ipynb",
@@ -135,6 +134,9 @@ notebooks = [
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/function-template-hamiltonian-simulation.ipynb",
     "docs/guides/function-template-chemistry-workflow.ipynb",
+
+    # Only works in runtime 0.41.1
+    "docs/guides/monitor-job.ipynb",
 
     # These notebooks are failing with auth errors and need investigating
     "docs/guides/serverless-first-program.ipynb",
