--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -160,6 +160,7 @@ notebooks = [
     "docs/guides/qiskit-transpiler-service.ipynb",
 
     # We never run tutorials notebooks
+    "docs/tutorials/transverse-field-ising-model.ipynb",
     "docs/tutorials/fractional-gates.ipynb",
     "docs/tutorials/shors-algorithm.ipynb",
     "docs/tutorials/multi-product-formula.ipynb",
