--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -90,7 +90,6 @@ notebooks = [
     "docs/guides/primitives.ipynb",
     "docs/guides/run-jobs-batch.ipynb",
     "docs/guides/run-jobs-session.ipynb",
-    "docs/guides/monitor-job.ipynb",
     "docs/guides/primitive-input-output.ipynb",
     "docs/guides/add-job-tags.ipynb",
 ]
@@ -135,6 +134,9 @@ notebooks = [
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/function-template-hamiltonian-simulation.ipynb",
     "docs/guides/function-template-chemistry-workflow.ipynb",
+
+    # Only works in runtime 0.41.1
+    "docs/guides/monitor-job.ipynb",
 
     # These notebooks are failing with auth errors and need investigating
     "docs/guides/serverless-first-program.ipynb",
